@@ -1,3 +1,10 @@
+Mon Sep 27 09:42:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/fuzz.pl:
+          Enable export file check, use TAO_IDL to generate export files or
+          remove the generated by line from the export file itself. Currently
+          only for CIAO and DAnCE
+
 Sat Sep 25 06:41:39 UTC 2010  Olli Savia  <ops@iki.fi>
 
         * ace/ACE.h:
